src/objects/Suggestion__c.object
<CustomObject>
    <fields>
        <fullName>Current_Value__c</fullName>
        <label>Current Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Suggested_Value__c</fullName>
        <label>Suggested Value</label>
        <type>TextArea</type>
    </fields>
    <label>Suggestion</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Suggestion-{0}</displayFormat>
        <label>Suggestion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suggestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>